2005-10-03 Derek Price  <derek@ximbiot.com>

	* fcntl-safer.m4, socklen.m4: New files from GNULIB.
	* canonicalize.m4, chdir-long.m4, dup2.m4, fnmatch.m4, ftruncate.m4,
	getaddrinfo.m4, getcwd.m4, getdate.m4, getpagesize.m4, gnulib-comp.m4,
	mbchar.m4, mbiter.m4, mkstemp.m4, mktime.m4, nanosleep.m4, openat.m4,
	pathmax.m4, regex.m4, save-cwd.m4, strcase.m4, strstr.m4,
	unistd-safer.m4, xgetcwd.m4, xreadlink.m4: Update from GNULIB.

2005-09-26  Derek Price  <derek@ximbiot.com>

	[bug #14639]
	* acx_with_gssapi.m4: Find the crypto library on FreeBSD 5.x.
	Patch from Serguei E. Leontiev <lse@CryptoPro.ru>.

2005-09-25  Derek Price  <derek@ximbiot.com>

	* lstat.m4: Update from GNULIB.

2005-09-19  Derek Price  <derek@ximbiot.com>

	Update from GNULIB.
	* st_mtim.m4: Remove this file.
	* timespec.m4, gnulib-cache.m4, gnulib-comp.m4: Updated.

2005-09-15  Derek Price  <derek@ximbiot.com>

	* strstr.m4: Update from GNULIB.

2005-09-09  Derek Price  <derek@ximbiot.com>

	* glob.m4: Update from GNULIB with alpha-quality glibc porting changes.

2005-09-06  Derek Price  <derek@ximbiot.com>

	Update from GNULIB with alpha-quality patch.
	* canon-host.m4, gnulib-comp.m4: Updated.
	* getaddrinfo.m4, sockpfaf.m4: New files.

2005-09-05  Derek Price  <derek@ximbiot.com>

	* mbchar.m4 (gl_MBCHAR): Only enable when wchar.h is found.
	(Patch from Yoann Vandoorselaere <yoann.v@prelude-ids.com>.)

2005-09-04  Derek Price  <derek@ximbiot.com>

	Update from GNULIB.
	* glob.m4, gnulib-cache.m4, gnulib-comp.m4: Updated.

	Add canon-host module from GNULIB.
	* canon-host.m4: New file.
	* gnulib-cache.m4, gnulib-comp.m4: Updated.
	* gnulib.m4: Removed.

	Update from GNULIB.
	* getopt.m4, getpass.m4, lib-link.m4, lib-prefix.m4, minmax.m4,
	regex.m4, strcase.m4, strstr.m4, unistd-safer.m4, xgetcwd.m4:
	Updated.
	* gnulib-cache.m4, gnulib-comp.m4, gnulib-tool.m4, mbchar.m4,
	mbiter.m4, memchr.m4: New files.

2005-09-03  Larry Jones  <lawrence.jones.ugs.com>
